# Cuttlefish

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml
.github/workflows/: main.yml
cmake/: FindFreeImage.cmake  FindPVRTexLib.cmake  config.cmake  install.cmake
cmake/templates/: NoExport.h
doc/: CMakeLists.txt  Doxyfile.in
lib/: AstcSources.cmake  Bc7enc16Sources.cmake  Bc7encRdoSources.cmake  Bc7encSources.cmake  CMakeLists.txt  CompressonatorSources.cmake  Etc2CompSources.cmake  FreeImageSources.cmake  IspcTexcompSources.cmake  NvttSources.cmake  README.md  SquishSources.cmake
lib/include/cuttlefish/: Color.h  Config.h  Image.h  Texture.h
lib/src/: AstcCompress.cpp  AstcCompress.h  AstcConverter.cpp  AstcConverter.h  Converter.cpp  Converter.h  EtcConverter.cpp  EtcConverter.h  HalfFloat.cpp  HalfFloat.h  Image.cpp  PvrtcConverter.cpp  PvrtcConverter.h  S3tcCompress.cpp  S3tcCompress.h  S3tcConverter.cpp  S3tcConverter.h  SaveDds.cpp  SaveDds.h  SaveKtx.cpp  SaveKtx.h  SavePvr.cpp  SavePvr.h  Shared.cpp  Shared.h  StandardConvert.cpp  StandardConvert.h  StandardConverter.cpp  StandardConverter.h  Texture.cpp
lib/test/: CMakeLists.txt  HalfFloatTest.cpp  ImageTest.cpp  TextureSaveTest.cpp  TextureTest.cpp
tool/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  README.md  cuttlefish.manifest.in  main.cpp
tool/test/: array.txt  cube-array.txt  cube.txt  custom-mip.txt  image.txt  run-test.bat  run-test.sh  texture.dds
